[package]
name = "hem"
version = "0.1.0"
authors = ["Jahziel Villasana <jahzielv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hemlib"
path = "src/lib.rs"

[dependencies]
structopt = "0.3.15"
reqwest = "0.10.6"
tokio = {version = "0.2.21", features = ["full"]}
feed-rs = "0.3.0"
serde_json = "1.0.55"
serde = "1.0.112"
itertools = "0.9.0"
dirs = "2.0.2"
