[package]
name = "hemingway"
version = "0.5.0"
authors = ["Jahziel Villasana <jahzielv@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/jahzielv/hemingway#hemingway"
repository = "https://github.com/jahzielv/hemingway"
keywords = ["cli", "RSS", "reader"]
categories = ["command-line-utilities"]
license = "MIT"
description = "An economical RSS reader for your terminal."


[lib]
name = "hemlib"
path = "src/lib.rs"

[[bin]]
name = "hem"
path = "src/main.rs"

[dependencies]
structopt = "0.3.15"
reqwest = "0.10.6"
tokio = {version = "0.2.21", features = ["full"]}
feed-rs = "0.3.0"
serde_json = "1.0.55"
serde = "1.0.112"
itertools = "0.9.0"
dirs = "2.0.2"
chrono = "0.4.11"
