[package]
authors = ["Jahziel Villasana <jahzielv@gmail.com>"]
categories = ["command-line-utilities"]
description = "An economical RSS reader for your terminal."
edition = "2018"
homepage = "https://github.com/jahzielv/hemingway#hemingway"
keywords = ["cli", "RSS", "reader"]
license = "MIT"
name = "hemingway"
readme = "README.md"
repository = "https://github.com/jahzielv/hemingway"
version = "0.7.0"

[lib]
name = "hemlib"
path = "src/lib.rs"

[[bin]]
name = "hem"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.11"
dialoguer = "0.6.2"
dirs = "2.0.2"
env_logger = "0.7.1"
feed-rs = "0.3.0"
futures = "0.3.5"
itertools = "0.9.0"
reqwest = "0.10.6"
serde = "1.0.112"
serde_json = "1.0.55"
structopt = "0.3.15"
tokio = {version = "0.2.21", features = ["full"]}
